Fix canvas container flex on firefox

--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,6 @@ body {
     background-color: #222;
     margin: 0;
 }
-.mainContainer {
-    display: flex;
-    flex-direction: row;
-}
 .canvasContainer {
     flex: 1;
 }
